--- a/OTED1.html
+++ b/OTED1.html
@@ -45,8 +45,7 @@
             }
 
             #borderbox{
-                border-width: 10px;
-                border-color: linear-gradient( to right , pink, purple , blue);
+                border: 10px solid linear-gradient( to right , pink, purple , blue);
                 border-radius: 20px;
                 height: 250px;
                 width: 380px;
@@ -73,7 +72,7 @@
                     </div>
             </div>
 
-            <textarea name="ghghnjng" id="borderbox" cols="30" rows="10"></textarea>
+            <textarea name="Enter post here..." id="borderbox" cols="30" rows="10"></textarea>
         </div>
     </body>
 </html>
